# PTIR5-py

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-app.yml
docs/: api_reference.md  data_types.md  examples.md  file_format.md  index.md  public_release_readiness.md  quickstart.md  release_checklist.md  tree_navigation.md
examples/: browse_tree.py  list_measurements.py  read_image.py  read_spectrum.py
src/ptir5/: __init__.py  _reader.py  enums.py  exceptions.py  file.py  metadata.py  models.py  tree.py
tests/: conftest.py  test_backgrounds.py  test_data_shapes.py  test_file.py  test_generated.py  test_malformed_inputs.py  test_measurements.py  test_metadata.py  test_pixel_format.py  test_regressions.py  test_slice_reading.py  test_tree.py
