[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptir5"
dynamic = ["version"]
description = "Read-only Python library for PTIR5 files (HDF5-based format from Photothermal Spectroscopy Corp.)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Photothermal Spectroscopy Corp." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "h5py>=3.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/psc-ptir/PTIR5-py"
Repository = "https://github.com/psc-ptir/PTIR5-py"

[tool.hatch.version]
path = "src/ptir5/_version.py"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
